--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qt4-x11 (1:4.7.4~git20110505+cssu6-thumb1) unstable; urgency=low
+
+  * Add kernel-feature-errata-430973-workaround dependency
+  * Move libs from /opt to /usr/lib
+
+ -- Ivaylo Dimtrov <freemangordon@abv.bg>  Sun, 27 May 2012 12:09:44 +0300
+
 qt4-x11 (1:4.7.4~git20110505+cssu6-thumb0) unstable; urgency=low
 
   * Maemo5 mkspec updated to use thumb, made compatible with gcc 4.6.2.
