--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qt4-x11 (1:4.7.4~git20110505+cssu9+thumb0) unstable; urgency=low
+
+  * Thumb2 compile
+
+ -- Ivaylo Dimtrov <freemangordon@abv.bg>  Mon, 14 Jan 2013 16:11:13 +0200
+
 qt4-x11 (1:4.7.4~git20110505+cssu9) unstable; urgency=low
 
   * Blacklist a couple of mis-issued certificates (incl. Turktrust). Backported from upstream.
